--- a/bundles/bundle_ru.properties
+++ b/bundles/bundle_ru.properties
@@ -122,6 +122,9 @@ block.tiered-3a-f-illuminator-iii.description = Светит ещë сильне
  block.tiered-1a-m-pulverizer-ii.description = Большой измельчитель. Использует воду как охлаждение.
  block.tiered-1a-m-pulverizer-iii.name = Шреддер 
  block.tiered-1a-m-pulverizer-iii.description = Работает так же, как и дробитель, но требует больше воды. 
+ 
+ #Эрикир фарбики
+block.tiered-1-silicon-arc-melter.name = Кремниивая дуговая кузница
   
  # энергия
  block.tiered-6a-h-surge-plasma-reactor.name = Плазмовый термоядерный реактор
@@ -191,11 +194,8 @@ block.tiered-3a-f-illuminator-iii.description = Светит ещë сильне
  block.tiered-7a-c-oil-extractor-ii.name = Продвинутая нефтяная вышка
  block.tiered-7a-c-oil-extractor-ii.description = Добывает нефть в больших количествах. 
  block.tiered-7a-c-oil-extractor-iii.name = Массовый нефтяной экстрактор
- block.tiered-7a-c-oil-extractor-iii.description = Бурит нефть из самых глубоких жид.
+ block.tiered-7a-c-oil-extractor-iii.description = Бурит нефть из самых глубоких и богатых жил.
  
  # юниты
- unit.tiered-a-upsilon.name = Ипсилон
+ unit.tiered-a-upsilon.name = Апсилон
  unit.tiered-a-upsilon.description = Основной юнит 4-го тира. Защищает ядро от врагов, строит структуры. Бронирован, имеет ракетную установку с большим уроном
- # турели
- block.tiered-eRuster.name = Оржавение
- block.tiered-eRuster.description = Стреляет ржавой пылью, налипающей на метал и вызывающий корозию
